--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
   <h5 class="my-0 mr-md-auto font-weight-normal">EmergnTech</h5>
   <nav class="my-2 my-md-0 mr-md-3">
-    <a class="p-2 text-dark" routerLink="/main">Главная</a>
+    <a class="p-2 text-dark" routerLink="/main">Main</a>
   </nav>
-  <a class="btn btn-outline-primary" routerLink="/">Sign in</a><mark></mark>
-  <a class="btn btn-outline-primary" routerLink="/register">Register</a>
+  <button class="btn btn-outline-primary" routerLink="/">Sign in</button><mark></mark>
+  <button class="btn btn-outline-primary" routerLink="/register">Register</button>
 </div>
 <router-outlet></router-outlet>
